minitrace-macro/tests/ui/err/trace-interleaved.stderr
error: expected `enter_on_poll = <bool>`
 --> tests/ui/err/trace-interleaved.rs:4:9
  |
4 | #[trace(struct)]
  |         ^^^^^^
